# Honors_Thesis

./: .gitignore  README.md  comments_20250814.txt  comments_20250820.txt  comments_20250821.txt  de430.bspzfdww_3u.tmp  demo.ipynb  notes2025-09-19.txt  notes20250919.txt  notes_2025-09-10.txt  pyproject.toml  selecting_3_obs.py  test_db.db
.github/workflows/: project.yml
Gauss/: Fortran_Code_Replica.py  Gauss_Method.py
Gauss.egg-info/: PKG-INFO  SOURCES.txt
Honor_thesis_Code/: Fortran_Code_Replica.py  Gauss_Method.py  math_fucntions.py
Test/: documentation_test.txt  test_fortran_code_replica.py  test_gauss_method.py  test_math_functions.py
gauss/: additional_features.py  data_analysis.py  demo.py  fortran_code_replica.py  gauss_method.py  math_fucntions.py  try.py
gauss.egg-info/: PKG-INFO  SOURCES.txt
gauss/fortran_data/: 153814_tracklet_35_40.obs  17188_tracklet_1_12.obs  17188_tracklet_35_40.obs  calc_values_153814_tracklet_35_40.txt  calc_values_17188_tracklet_1_12.txt  calc_values_17188_tracklet_35_40.txt  calc_values_s00433.txt  calc_values_s17188.txt  r1_s17188.fel  r1_s17188.ke  r2_s00433.fel  r2_s00433.ke  r2_s17188.fel  r2_s17188.ke  r3_153814_tracklet_35_40.fel  r3_153814_tracklet_35_40.ke  r3_17188_tracklet_35_40.fel  r3_17188_tracklet_35_40.ke  r3_s00433.fel  r3_s00433.ke  r3_s17188.fel  r3_s17188.ke  s00433.obs  s17188.obs
test/: test_fortran_code_replica.py  test_gauss_method.py  test_math_functions.py
