[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauss"
version = "1.0.0"
description = "Honor thesis work, with Gauss's method"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
{name = "Mila"}
]
dependencies = [
"numpy>= 2.3.1"
]

[tool.setuptools]
packages = ["gauss"]